--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-native-community/checkbox": "^0.5.8",
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-community/picker": "^1.8.1",
+    "@react-native-firebase/app": "^12.0.0",
     "@react-native-picker/picker": "^1.16.1",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
