--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-community/picker": "^1.8.1",
     "@react-native-firebase/app": "^12.0.0",
     "@react-native-picker/picker": "^1.16.1",
+    "@react-navigation/bottom-tabs": "^5.11.11",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
     "@reduxjs/toolkit": "^1.6.0",
@@ -31,6 +32,7 @@
     "react-native-reanimated": "~2.1.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.0.0",
+    "react-native-vector-icons": "^8.1.0",
     "react-native-web": "~0.13.12",
     "react-redux": "^7.2.4",
     "redux": "^4.1.0"
