--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
     "react-native-chart-kit": "^6.11.0",
+    "react-native-charts-wrapper": "^0.5.7",
     "react-native-dots-pagination": "^0.2.0",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-onboarding-swiper": "^1.1.4",
@@ -38,13 +39,15 @@
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.0.0",
     "react-native-svg": "^12.1.1",
+    "react-native-svg-charts": "^5.4.0",
     "react-native-vector-icons": "^8.1.0",
     "react-native-web": "~0.13.12",
     "react-navigation": "^4.4.4",
     "react-redux": "^7.2.4",
     "recharts": "^2.0.9",
     "redux": "^4.1.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "victory-native": "^35.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
