--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-native-screens": "~3.0.0",
     "react-native-svg": "^12.1.1",
     "react-native-svg-charts": "^5.4.0",
+    "react-native-swipeout": "^2.3.6",
     "react-native-vector-icons": "^8.1.0",
     "react-native-web": "~0.13.12",
     "react-navigation": "^4.4.4",
