--- a/package.json
+++ b/package.json
@@ -21,18 +21,18 @@
     "expo": "~41.0.1",
     "expo-app-loading": "^1.0.3",
     "expo-font": "~9.1.0",
-    "expo-image-picker": "^10.1.4",
+    "expo-image-picker": "~10.1.4",
     "expo-status-bar": "~1.0.4",
-    "firebase": "^8.2.3",
+    "firebase": "8.2.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-paper": "^4.9.2",
-    "react-native-reanimated": "^2.2.0",
+    "react-native-reanimated": "~2.1.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.0.0",
-    "react-native-svg": "^12.1.1",
+    "react-native-svg": "12.1.0",
     "react-native-svg-charts": "^5.4.0",
     "react-native-vector-icons": "^8.1.0",
     "react-native-web": "~0.13.12",
@@ -43,7 +43,7 @@
     "victory-native": "^35.3.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0",
+    "@babel/core": "~7.9.0",
     "react-image-resizer": "^1.3.0"
   },
   "private": true
