--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/stack": "^5.14.5",
     "@reduxjs/toolkit": "^1.6.0",
     "axios": "^0.21.1",
+    "dotenv": "^10.0.0",
     "expo": "~41.0.1",
     "expo-app-loading": "^1.0.3",
     "expo-font": "~9.1.0",
@@ -48,7 +49,9 @@
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
-    "react-image-resizer": "^1.3.0"
+    "@types/react-native": "~0.63.2",
+    "react-image-resizer": "^1.3.0",
+    "typescript": "~4.0.0"
   },
   "private": true
 }
