--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "expo-google-app-auth": "^8.2.2",
     "expo-image-picker": "~10.1.4",
     "expo-status-bar": "~1.0.4",
+    "express": "^4.17.1",
     "firebase": "8.2.3",
     "plaid": "^8.5.2",
     "react": "16.13.1",
