--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "dotenv": "^10.0.0",
     "expo": "~41.0.1",
     "expo-app-loading": "^1.0.3",
+    "expo-constants": "^11.0.1",
     "expo-font": "~9.1.0",
     "expo-google-app-auth": "^8.2.2",
     "expo-image-picker": "~10.1.4",
+    "expo-notifications": "^0.12.2",
     "expo-status-bar": "~1.0.4",
     "express": "^4.17.1",
     "firebase": "8.2.3",
