--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
 		"react-native-svg-charts": "^5.4.0",
 		"react-native-vector-icons": "^8.1.0",
 		"react-native-web": "~0.13.12",
+		"react-native-webview": "^11.6.5",
 		"react-navigation": "^4.4.4",
 		"react-plaid-link": "^3.2.0",
 		"react-redux": "^7.2.4",
