html file connected to local host server

--- a/.env
+++ b/.env
@@ -13,9 +13,9 @@ PLAID_PRODUCTS=auth,transactions
 # see https://plaid.com/docs/api/tokens/#link-token-create-request-country-codes for a complete list
 PLAID_COUNTRY_CODES=US,CA
 # Only required for OAuth:
-# Set PLAID_REDIRECT_URI to 'http://localhost:19002'
 # The OAuth redirect flow requires an endpoint on the developer's website
 # that the bank website should redirect to. You will need to configure
 # this redirect URI for your client ID through the Plaid developer dashboard
 # at https://dashboard.plaid.com/team/api.
 PLAID_REDIRECT_URI=http://localhost:19002
+LOCAL_HOST=http://192.168.1.20:19002
