--- a/.env
+++ b/.env
@@ -19,3 +19,4 @@ PLAID_COUNTRY_CODES=US,CA
 # at https://dashboard.plaid.com/team/api.
 PLAID_REDIRECT_URI=http://localhost:19002
 LOCAL_HOST=http://192.168.1.20:19002
+PORT=19002
