post token exchange logic to server

--- a/.env
+++ b/.env
@@ -1,22 +1,6 @@
 PLAID_CLIENT_ID=60e452c919a2660010f8bcc1
 PLAID_SECRET=b5e1e0bc4c95d7c053b38f7c17db50
-# Use 'sandbox' to test with fake credentials in Plaid's Sandbox environment
-# Use 'development' to test with real credentials while developing
-# Use 'production' to go live with real users
 PLAID_ENV=sandbox
-# PLAID_PRODUCTS is a comma-separated list of products to use when
-# initializing Link, e.g. PLAID_PRODUCTS=auth,transactions.
-# see https://plaid.com/docs/api/tokens/#link-token-create-request-products for a complete list
 PLAID_PRODUCTS=auth,transactions
-# PLAID_COUNTRY_CODES is a comma-separated list of countries to use when
-# initializing Link, e.g. PLAID_COUNTRY_CODES=US,CA.
-# see https://plaid.com/docs/api/tokens/#link-token-create-request-country-codes for a complete list
 PLAID_COUNTRY_CODES=US,CA
-# Only required for OAuth:
-# The OAuth redirect flow requires an endpoint on the developer's website
-# that the bank website should redirect to. You will need to configure
-# this redirect URI for your client ID through the Plaid developer dashboard
-# at https://dashboard.plaid.com/team/api.
-PLAID_REDIRECT_URI=http://localhost:19002
-LOCAL_HOST=http://192.168.1.20:19002
-PORT=19002
+PLAID_REDIRECT_URI=https://localhost:19002
