--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"expo-status-bar": "~1.0.4",
 		"express": "^4.17.1",
 		"firebase": "8.2.3",
+		"mongoose": "^5.13.2",
 		"plaid": "^8.5.2",
 		"react": "16.13.1",
 		"react-dom": "16.13.1",
