mongodb server running

--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@ PLAID_ENV=sandbox
 PLAID_PRODUCTS=auth,transactions
 PLAID_COUNTRY_CODES=US,CA
 PLAID_REDIRECT_URI=https://localhost:19002
-DB_CONNECTION_STRING=mongodb+srv://maggieyi:uxZN7Nggjx94mmPG@cluster0.m6uk3.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+DB_CONNECTION_STRING=mongodb+srv://maggieyi:K05okzwWhVsYEnJE@cluster0.m6uk3.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
