--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 PLAID_CLIENT_ID=60e452c919a2660010f8bcc1
 PLAID_SECRET=b5e1e0bc4c95d7c053b38f7c17db50
 PLAID_ENV=sandbox
-PLAID_PRODUCTS=auth,transactions
+PLAID_PRODUCTS=auth,transactions, identity
 PLAID_COUNTRY_CODES=US,CA
 PLAID_REDIRECT_URI=https://localhost:19002
 DB_CONNECTION_STRING=mongodb+srv://maggieyi:K05okzwWhVsYEnJE@cluster0.m6uk3.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
