--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 	},
 	"dependencies": {
 		"@expo-google-fonts/inter": "^0.1.0",
+		"@mongodb-js/charts-embed-dom": "^2.0.1",
 		"@react-native-community/checkbox": "^0.5.8",
 		"@react-native-community/masked-view": "0.1.10",
 		"@react-native-firebase/app": "^12.0.0",
