add transaction schema

--- a/.env
+++ b/.env
@@ -3,5 +3,5 @@ PLAID_SECRET=b5e1e0bc4c95d7c053b38f7c17db50
 PLAID_ENV=sandbox
 PLAID_PRODUCTS=auth,transactions, identity
 PLAID_COUNTRY_CODES=US,CA
-PLAID_REDIRECT_URI=https://localhost:19002
+PLAID_REDIRECT_URI=https://192.168.1.20:19002
 DB_CONNECTION_STRING=mongodb+srv://maggieyi:K05okzwWhVsYEnJE@cluster0.m6uk3.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
