--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
 		"@reduxjs/toolkit": "^1.6.0",
 		"axios": "^0.21.1",
 		"body-parser": "^1.19.0",
+		"braintree": "^3.6.0",
+		"braintree-web": "^3.79.1",
+		"braintree-web-drop-in": "^1.31.0",
 		"dotenv": "^10.0.0",
 		"expo": "~41.0.1",
 		"expo-app-loading": "^1.0.3",
