--- a/.env
+++ b/.env
@@ -5,3 +5,6 @@ PLAID_PRODUCTS=auth,transactions, identity
 PLAID_COUNTRY_CODES=US,CA
 PLAID_REDIRECT_URI=https://192.168.1.20:19002
 DB_CONNECTION_STRING=mongodb+srv://maggieyi:K05okzwWhVsYEnJE@cluster0.m6uk3.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+MERCHANT_ID=tyzv6s7y3v2vmp24
+PUBLIC_KEY=c53qj2cs3rj55g88
+PRIVATE_KEY=cc4dd96ad148cd71dcb2f80b3c4650b7
